<resources>
    <string name="app_name">Tokopedih</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="keranjang">Keranjang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="user_email_com">user@email.com</string>
    <string name="_12345678">12345678</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="muji">Muji</string>
    <string name="muji_gmail_com">muji@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="daftar">Daftar</string>
    <string name="dengan_mendaftar_saya_menyetujui">Dengan mendaftar, saya menyetujui</string>
    <string name="syarat_dan">Syarat dan</string>
    <string name="ketentuan">Ketentuan</string>
    <string name="serta">serta</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="name">Name</string>
    <string name="_0811111">0811111</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="logout">Logout</string>
</resources>